--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -1,23 +1,26 @@
 name: FORK-TO-BRANCH
 
 on:
-#   workflow_dispatch:
-#     inputs:
-#       source-branch:
-#         type: string
-#         description: The name of the branch from forked-repo.
-#         required: true
-#       contributor-name:
-#         type: string
-#         description: write your github-user name.
-#         required: true
   issue_comment:
     types: [created]
     
 jobs:
-  create_branch:
+  check-comment:
     runs-on: ubuntu-latest
     if: ${{ github.event.issue.pull_request }}
+    outputs:
+      trigger-comment: ${{ steps.check.outputs.triggered }}
+    steps: 
+      - uses: khan/pull-request-comment-trigger@v1.1.0
+        id: check
+        with:
+          trigger: "run branch"
+          prefix_only: 'true'
+
+  create_branch:
+    runs-on: ubuntu-latest
+    needs: [check-comment]
+    if: ${{ needs.check-comment.outputs.trigger-comment == 'true' }}
     steps:
       - uses: actions/github-script@v3
         id: get-pr
@@ -42,14 +45,7 @@ jobs:
           ref: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
           repository: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.full_name }}
             
-      - uses: khan/pull-request-comment-trigger@v1.1.0
-        id: check
-        with:
-          trigger: "run branch"
-          prefix_only: 'true'
-  
       - name: Check if branch exists
-        if: steps.check.outputs.triggered == 'true'
         env: 
           REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
         run: |
@@ -64,7 +60,6 @@ jobs:
           fi
 
       - name: Git remote add upstream
-        if: steps.check.outputs.triggered == 'true'
         env:
           OWNER: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.owner.login }}
           REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
