--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -69,8 +69,7 @@ jobs:
           git remote add upstream https://github.com/shaharblanksela/fork-to-branch.git
           git fetch --all
           git checkout ${{ env.REF }}
-          git config pull.ff only
-          git pull upstream main
+          git pull
           git checkout -b pr/${{ env.REF }}
           git push --set-upstream upstream pr/${{ env.REF }}
           
